force-app/main/default/objects/Approver_Comment__c/Approver_Comment__c.object-meta.xml
<CustomObject>
    <label>Approver Comment</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Approver Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approver Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>