force-app/main/default/objects/Approver_Comment__c/fields/Onboarding_Officer__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Comments1</relationshipName>
    <type>Lookup</type>
</CustomField>